fix: Correct birthday description and update table styling for better readability

--- a/pro html/clase html.html/3-Diseño-Calendario.css
+++ b/pro html/clase html.html/3-Diseño-Calendario.css
@@ -58,13 +58,3 @@ td {
     color: #c00;
     font-weight: bold;
 }
-.numero {
-    background-color: #fff0f0;
-    color: rgb(38, 38, 38);
-    font-weight: bold;
-}
-.fecha {
-    background-color: #fff0f0;
-    color: rgb(24, 24, 24);
-    font-weight: bold;
-}
